doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/home/valerie/Escritorio/DAM/Programacion/78bba85edb6dbb89fb59:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/valerie/Escritorio/DAM/Programacion/julepe-hecho-en-clase
-d
/home/valerie/Escritorio/DAM/Programacion/julepe-hecho-en-clase/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/valerie/Escritorio/DAM/Programacion/julepe-hecho-en-clase/Mazo.java
<---- end of javadoc command ---->
Loading source file /home/valerie/Escritorio/DAM/Programacion/julepe-hecho-en-clase/Mazo.java...
/home/valerie/Escritorio/DAM/Programacion/julepe-hecho-en-clase/Mazo.java:35: error: ')' expected
        mazo.add(new Carta(valorActual, paloActual[4]);
                                                      ^
1 error
